--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "seed": "ts-node src/scripts/seed.ts"
+    "seed": "ts-node src/scripts/seed.ts",
+    "ensure-admin": "ts-node src/scripts/ensure-admin-user.ts"
   },
   "keywords": [
     "ecommerce",
